feed inline replies no longer overflow out of the container

--- a/ui/less/com/msg-view/card.less
+++ b/ui/less/com/msg-view/card.less
@@ -147,6 +147,7 @@
       background: #fafafa;
       color: #666;
       font-weight: 300;
+      word-break: break-word;
       a {
         color: #777;
         font-weight: normal;
